--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,7 @@ body {
 .navbar {
   width: 100%;
   height: 80px;
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
+  color: rgb(224, 110, 17);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,7 +20,7 @@ body {
 .navbar .logo {
   margin-left: 30px;
   font-family: "Poppins";
-  font-size: 54px;
+  font-size: 50px;
 }
 .navbar .nav-links {
   margin-right: 30px;
@@ -30,7 +29,7 @@ body {
   margin: 20px;
   font-size: 24px;
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   position: relative;
 }
 .navbar .nav-links a::after {
@@ -90,9 +89,6 @@ body {
 .login--container form ::-moz-placeholder {
   color: rgb(228, 228, 228);
 }
-.login--container form :-ms-input-placeholder {
-  color: rgb(228, 228, 228);
-}
 .login--container form ::placeholder {
   color: rgb(228, 228, 228);
 }
@@ -130,183 +126,301 @@ body {
   border-bottom: 1px solid rgb(0, 0, 0);
 }
 
-.view--container {
-  background-color: #2C74B3;
-  width: 90%;
-  margin: 2rem auto;
+.standings-header {
+  width: 100%;
+  height: 50vh;
   display: flex;
-  flex-direction: column;
-  border: 3px solid rgb(0, 0, 0);
 }
-.view--container .view--header {
-  background-color: #144272;
-  color: white;
-  font-family: "Playfair Display";
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  margin: 30px auto;
-  border: 3px solid rgb(228, 228, 228);
-}
-.view--container .view--header h1 {
-  padding: 20px;
-  font-size: 42px;
-  letter-spacing: 3px;
-  text-align: center;
-}
-.view--container .view--header .season-form {
-  text-align: center;
-  margin: 0 auto;
-  font-size: 28px;
-  padding-bottom: 20px;
+.standings-header .stdheader {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.view--container .view--header .season-form label {
-  color: rgb(224, 110, 17);
-  margin-right: 5px;
-  font-size: 20px;
+.standings-header .col1 {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
 }
-.view--container .view--header .season-form select, .view--container .view--header .season-form button {
-  border: 2px solid rgb(0, 0, 0);
-  box-shadow: 2px 3px 3px rgb(0, 0, 0);
-  height: 2.5rem;
-  margin-right: 5px;
+.standings-header .col1 h1 {
+  font-size: 63px;
+  font-family: "Montserrat";
+  color: #2C74B3;
 }
-.view--container .view--header .season-form select {
-  width: 10rem;
+.standings-header .col1 .season-form {
+  padding: 7px 12px;
+  display: flex;
+  /* apply CSS to the select tag */
+  /* for IE10 */
 }
-.view--container .view--header .season-form button {
+.standings-header .col1 .season-form .std-season-desc, .standings-header .col1 .season-form button {
+  border-radius: 3rem;
   background-color: rgb(255, 255, 255);
-  width: 3rem;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.7);
+  border: 2px solid black;
+  transition: all 300ms;
+  padding: 20px;
   cursor: pointer;
 }
-.view--container .view--header .season-form button:hover {
-  background-color: rgb(224, 110, 17);
+.standings-header .col1 .season-form select {
+  text-align: center;
+  font-size: 20px;
+  border: none;
+}
+.standings-header .col1 .season-form button {
+  border: 2px solid #2C74B3;
+  font-size: 20px;
+  margin-left: 10px;
+}
+.standings-header .col1 .season-form select:hover {
+  background-color: rgb(140, 140, 140);
   color: rgb(0, 0, 0);
 }
-.view--container .view--header .flash {
-  font-family: "Montserrat";
+.standings-header .col1 .season-form button:hover {
+  background-color: #2C74B3;
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+.standings-header .col1 .season-form select:focus,
+.standings-header .col1 .season-form button:focus {
+  outline: none;
+}
+.standings-header .col1 .season-form select {
+  /* for Firefox */
+  -moz-appearance: none;
+  /* for Safari, Chrome, Opera */
+  -webkit-appearance: none;
+}
+.standings-header .col1 .season-form select::-ms-expand {
+  display: none;
+}
+.standings-header .col1 .flash {
+  font-family: "Playfair Display";
   text-align: center;
-  width: 25%;
-  margin: 0 auto 8px auto;
-}
-.view--container .view--header .fail {
-  border-bottom: 2px solid red;
-}
-.view--container .view--header .success {
-  border-bottom: 2px solid green;
-}
-.view--container .team-info--wrapper {
-  background-color: #0A2647;
-  width: 90%;
   margin: 0 auto;
-  border: 3px solid rgb(228, 228, 228);
 }
-.view--container .team-info--wrapper .team-text {
-  margin-left: 30px;
-  padding: 20px;
+.standings-header .col1 .fail {
+  color: red;
 }
-.view--container .team-info--wrapper .team-text h1 {
-  color: rgb(224, 110, 17);
-  font-size: 36px;
-  text-decoration: underline;
+.standings-header .col1 .success {
+  color: green;
 }
-.view--container .team-info--wrapper .team-text h3, .view--container .team-info--wrapper .team-text p, .view--container .team-info--wrapper .team-text h4 {
-  margin: 20px 0 0 20px;
-  color: white;
+.standings-header .col2 {
+  width: 40%;
 }
-.view--container .team-info--wrapper .team-text p {
-  margin-left: 60px;
-  font-size: 24px;
+.standings-header .col2 .standings-image {
+  width: 400px;
+  height: 250px;
+  border: 1px solid black;
+  margin-right: 4vw;
+  background-image: url("https://imgs.search.brave.com/mwt82WDEqdA9nMhk2WE8ZdU-dMvDFbsTnxdKec-Wdik/rs:fit:592:225:1/g:ce/aHR0cHM6Ly90c2Uz/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC4t/YmRpRDZFYnA5UnNO/UjV1VExDRVpRSGFG/NyZwaWQ9QXBp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
 }
-.view--container .team-info--wrapper .team-text p span {
-  color: rgb(224, 110, 17);
-}
-.view--container .team-info--wrapper .team-text p .game-date {
-  font-size: 16px;
-  color: white;
-}
-.view--container .team-info--wrapper .team-text .no-team-msg {
-  text-align: center;
-  margin: 0;
-}
-.view--container .view--table {
-  border: 3px solid rgb(228, 228, 228);
+
+.standings-table {
+  width: 100%;
   border-collapse: collapse;
-  width: 90%;
-  margin: 10px auto 30px auto;
 }
-.view--container .view--table .column-one {
+.standings-table .stdtble-col1 {
   width: 5%;
 }
-.view--container .view--table .column-two {
+.standings-table .stdtble-col2 {
   width: 55%;
 }
-.view--container .view--table .column-three {
+.standings-table .stdtble-col3 {
   width: 10%;
 }
-.view--container .view--table .column-four {
+.standings-table .stdtble-col4 {
   width: 10%;
 }
-.view--container .view--table .column-five {
+.standings-table .stdtble-col5 {
   width: 10%;
 }
-.view--container .view--table .game-column-one {
-  width: 25%;
-}
-.view--container .view--table .game-column-two {
-  width: 12.5%;
-}
-.view--container .view--table .game-column-three {
-  width: 5%;
-}
-.view--container .view--table .game-column-four {
-  width: 12.5%;
-}
-.view--container .view--table .game-column-five {
-  width: 25%;
-}
-.view--container .view--table .game-column-six {
-  width: 20%;
-}
-.view--container .view--table .header-row {
-  background-color: #0A2647;
-  color: white;
+.standings-table .header-row {
+  background-color: #144272;
+  color: rgb(224, 110, 17);
   border-bottom: 1px solid rgb(228, 228, 228);
 }
-.view--container .view--table .header-row th {
+.standings-table .header-row th {
   padding: 20px;
+  font-family: "Poppins";
+  font-size: 18px;
 }
-.view--container .view--table .header-row .name-col {
+.standings-table .header-row .name-col {
   text-align: left;
 }
-.view--container .view--table .header-row .right {
+.standings-table .header-row .right {
   text-align: right;
 }
-.view--container .view--table tbody tr {
+.standings-table tbody tr {
   background-color: white;
   border-bottom: 1px solid rgb(105, 105, 105);
 }
-.view--container .view--table tbody tr td {
+.standings-table tbody tr td {
   padding: 10px;
 }
-.view--container .view--table tbody tr .name-col {
+.standings-table tbody tr .name-col {
   padding-left: 1.2em;
   cursor: pointer;
 }
-.view--container .view--table tbody tr .right {
+.standings-table tbody tr .right {
   text-align: right;
 }
-.view--container .view--table tbody tr .centered {
+.standings-table tbody tr .centered {
   text-align: center;
 }
-.view--container .view--table tbody tr:nth-child(even) {
+.standings-table tbody tr:nth-child(even) {
   background-color: rgb(228, 228, 228);
 }
-.view--container .view--table tbody tr:hover {
+.standings-table tbody tr:hover {
+  background-color: #2C74B3;
+  color: rgb(255, 255, 255);
+}
+
+.stats--header {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+}
+.stats--header .stats-title {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.stats--header .stats-title h1 {
+  font-size: 54px;
+  color: #2C74B3;
+}
+.stats--header .stats-title .season-form {
+  padding: 7px 12px;
+  display: flex;
+  /* apply CSS to the select tag */
+  /* for IE10 */
+}
+.stats--header .stats-title .season-form .stat-select, .stats--header .stats-title .season-form button {
+  border-radius: 3rem;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.7);
+  border: 2px solid black;
+  transition: all 300ms;
+  padding: 20px;
+  cursor: pointer;
+}
+.stats--header .stats-title .season-form select {
+  text-align: center;
+  font-size: 20px;
+  border: none;
+}
+.stats--header .stats-title .season-form button {
+  border: 2px solid #2C74B3;
+  font-size: 20px;
+  margin-left: 10px;
+}
+.stats--header .stats-title .season-form select:hover {
+  background-color: rgb(140, 140, 140);
+  color: rgb(0, 0, 0);
+}
+.stats--header .stats-title .season-form button:hover {
+  background-color: #2C74B3;
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+.stats--header .stats-title .season-form select:focus,
+.stats--header .stats-title .season-form button:focus {
+  outline: none;
+}
+.stats--header .stats-title .season-form select {
+  /* for Firefox */
+  -moz-appearance: none;
+  /* for Safari, Chrome, Opera */
+  -webkit-appearance: none;
+}
+.stats--header .stats-title .season-form select::-ms-expand {
+  display: none;
+}
+.stats--header .stats-info {
+  margin-top: 20px;
+  width: 60%;
   background-color: #144272;
+  border-radius: 3rem 0 0 3rem;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.7);
+}
+.stats--header .stats-info h1 {
+  text-align: right;
+  margin: 20px 30px 0 0;
+  color: rgb(224, 110, 17);
+  font-size: 42px;
+  text-decoration: underline;
+}
+.stats--header .stats-info .record {
+  text-align: right;
+  margin: 0 45px 0 0;
+  color: rgb(182, 88, 12);
+  font-size: 24px;
+}
+.stats--header .stats-info .small-rec {
+  font-size: 18px;
+}
+.stats--header .stats-info h4 {
+  margin-top: 20px;
+  font-size: 28px;
+  padding-left: 50px;
+  color: rgb(255, 255, 255);
+}
+.stats--header .stats-info .team-stat-table {
+  width: 100%;
+  margin: 0;
+  border-collapse: collapse;
+}
+.stats--header .stats-info .team-stat-table .team-col1 {
+  width: 22.5%;
+}
+.stats--header .stats-info .team-stat-table .team-col2 {
+  width: 5%;
+}
+.stats--header .stats-info .team-stat-table .team-col3 {
+  width: 22.5%;
+}
+.stats--header .stats-info .team-stat-table .team-col4 {
+  width: 25%;
+}
+.stats--header .stats-info .team-stat-table .team-col5 {
+  width: 25%;
+}
+.stats--header .stats-info .team-stat-table .header-row {
+  background-color: rgb(0, 0, 0);
+  height: 40px;
+}
+.stats--header .stats-info .team-stat-table .header-row th {
+  color: rgb(224, 110, 17);
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+.stats--header .stats-info .team-stat-table .header-row .centered {
+  text-align: center;
+}
+.stats--header .stats-info .team-stat-table tbody tr {
+  background-color: white;
+  border-bottom: 1px solid rgb(105, 105, 105);
+}
+.stats--header .stats-info .team-stat-table tbody tr td {
+  padding: 10px;
+}
+.stats--header .stats-info .team-stat-table tbody tr .name-col {
+  padding-left: 1.2em;
+  cursor: pointer;
+}
+.stats--header .stats-info .team-stat-table tbody tr .centered {
+  text-align: center;
+}
+.stats--header .stats-info .team-stat-table tbody tr:nth-child(even) {
+  background-color: rgb(228, 228, 228);
+}
+.stats--header .stats-info .team-stat-table tbody tr:hover {
+  background-color: #2C74B3;
   color: rgb(255, 255, 255);
 }
 
