--- a/styles/style.scss
+++ b/styles/style.scss
@@ -187,7 +187,7 @@ body {
                 box-shadow: 0 2px 2px rgba(0, 0, 0, .7);
                 border: 2px solid black;
                 transition: all 300ms;
-                padding: 20px;
+                padding: 15px;
                 cursor: pointer;
             }
 
@@ -334,7 +334,7 @@ body {
         }
 
         tr:nth-child(even) {
-            background-color: $offwhite;
+            background-color: rgb(160, 160, 160);
         }
 
         tr:hover {
